<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.varkasa.varkasa.varkasa.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/toolbarbackfroundColour"
        android:id="@+id/reg_toolbar"

        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></android.support.v7.widget.Toolbar>



    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/reg_desplay_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_account"
        android:layout_below="@+id/reg_password"
        android:background="@color/toolbarbackfroundColour"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textColor="@color/button_background_color"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/reg_desplay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/desplay_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/reg_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/Creat_Account_Color"
        android:layout_marginTop="57dp"
        android:text="@string/create_a_new_account"
        android:layout_below="@+id/reg_toolbar"
        android:layout_alignLeft="@+id/reg_desplay_name"
        android:layout_alignStart="@+id/reg_desplay_name" />
</RelativeLayout>
