<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.varkasa.varkasa.varkasa.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/toolbarbackfroundColour"
        android:id="@+id/login_toolbar"

        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></android.support.v7.widget.Toolbar>



    <EditText
        android:id="@+id/login_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/toolbarbackfroundColour"
        android:gravity="center"
        android:textColor="@color/button_background_color"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_password"
        android:layout_alignRight="@+id/login_mail"
        android:layout_alignEnd="@+id/login_mail" />



    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"

        android:layout_marginRight="20dp"
        android:layout_below="@+id/login_mail"
        android:layout_alignLeft="@+id/login_mail"
        android:layout_alignStart="@+id/login_mail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/Creat_Account_Color"
        android:layout_marginTop="100dp"
        android:text="@string/login_to_your_account"
        android:layout_marginLeft="20dp"

        android:layout_below="@+id/reg_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
